--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-blocks.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-blocks/_footer-blocks.scss
@@ -96,6 +96,11 @@
 			width: auto;
 		}
 	}
+	.ctct-form-custom{
+		.grecaptcha-badge{
+			display: none !important;
+		}
+	}
 }//end block-4 newsletter
 
 /* FOOTER MENU
