Update saerch block , colors, macros

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_component-color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_component-color-vars.scss
@@ -27,7 +27,7 @@ $sfChildActive:    $black;
 $sfDropdown:       $lightGrey;
 
 //dark background
-$navBack:            $midGrey;
+$navBack:            $red;
 $sfTopBackHoverRev:  $darkGrey;
 $sfTopLinkRev:       $white;
 $sfTopActiveRev:     $link;
