Added GA module, fixed accordion theming.

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
@@ -5,9 +5,10 @@
 {{ accordion_instructions }}
 
 <div class="accordion-item" aria-label="Accordion">
-	<h3 class="accordion-header"><a href="#" role="button" aria-controls="{{ accordion_control }}" aria-expanded="false">{{accordion_header}}</a></h3>
+	<div class="accordion-header">
+        <a href="#" role="button" aria-controls="{{ accordion_control }}" aria-expanded="false">{{accordion_header}}</a>
+    </div>
 	<div class="field field-oc-long-text" id="{{ accordion_control }}" aria-hidden="true">
 		{{accordion_content}}
 	</div>
 </div>
-			
