Update widget titles in pl, gallery config tweaks

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/02-accordion-group.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/02-accordion-group.twig
@@ -2,7 +2,7 @@
   STYLEGUIDE ONLY: This template is not embedded into Drupal.
 #}
 <div class="paragraph paragraph--type--accordion-group">
-	<h3 class="widget-title">Accordion Group</h3>
+	<div class="widget-title">Accordion Group</div>
 	<div class="field field-accordion-item">
 		{% for accordion in accordion_group %}
 			<div>
