--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.twig
@@ -11,7 +11,7 @@
 {% block galleryContent %}
 
     {% if widget_title %}
-        <h3 class="widget-title">{{widget_title}}</h3>
+        <div class="widget-title">{{widget_title}}</div>
     {% endif %}
 
     <div class="gallery-type {{gallery_type}}" >
