--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/video.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/video.twig
@@ -7,7 +7,7 @@
 <div class="paragraph paragraph--type--video">
 	
 	{% if widget_title %}
-		<h3 class="widget-title">{{ widget_title }}</h3>
+		<div class="widget-title">{{ widget_title }}</div>
 	{% endif %}
 
 	<div class="field field-oc-video">
