--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/block-placer/block-placer.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/block-placer/block-placer.twig
@@ -7,7 +7,7 @@
 	<div class="paragraph--type--block-placer">
 {% endblock %}
 	{% if widget_title %}
-		<h3 class="widget-title">{{widget_title}}</h3>
+		<div class="widget-title">{{widget_title}}</div>
 	{% endif %}
 		<div class="field-block">
 			{% block blockPlacer %}
