--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/form.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/form.twig
@@ -4,7 +4,7 @@
 {{ form_instructions }}
 
 <div class="paragraph paragraph--type--form">
-	<h3 class="widget-title">Form</h3>
+	<div class="widget-title">Form</div>
 	<div class="field field-oc-long-text">{{ form_text }}</div>
 	<div class="field field-oc-form">
 		<form class="webform-submission-form">
