--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/image/image.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/image/image.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 	{% if widget_title %}
-		<h3 class="widget-title">{{widget_title}}</h3>
+		<div class="widget-title">{{widget_title}}</div>
 	{% endif %}
 	
 	{% block imageWrapper %}
