--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
@@ -43,7 +43,7 @@
     {{ attach_library('oc_patterns/galleries') }}
     {% embed "@organisms/01-widgets/gallery/gallery.twig"
         with{
-            gallery_type: content.field_gallery_type.0,
+            gallery_type: content.field_gallery_type.0['#markup'],
 			widget_title: content.field_widget_title.0['#context'].value
         }
     %}
