Fix bug in layout builder ui for paragraphs

--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-oc-widgets.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-oc-widgets.html.twig
@@ -54,16 +54,16 @@ set classes = [
 {% endfor %}
 
 {%- if count > 0 -%}
-   <nav class="widget-anchors" role="navigation" aria-labelledby="toc-title">
+  <nav class="widget-anchors" aria-labelledby="toc-title">
 		<h2 id="toc-title"><a href="#" class="toc-toggle"><i class="fa fa-bars" aria-hidden="true"></i>On This Page</a></h2>
 		<div id="toc-anchor-wrapper" class="anchors">
-	      {%- for anchor in items -%}
-				{%- if anchor.content['#paragraph'].field_anchor_link.0.value -%}
-	            <a href="#anchor-{{ anchor.content['#paragraph'].field_anchor_link.0.value|clean_id }}">{{- anchor.content['#paragraph'].field_anchor_link.0.value -}}</a>
-	         {%- endif -%}
-	      {%- endfor -%}
-	   </div>
-	</div>  
+      {%- for anchor in items -%}
+			{%- if anchor.content['#paragraph'].field_anchor_link.0.value -%}
+            <a href="#anchor-{{ anchor.content['#paragraph'].field_anchor_link.0.value|clean_id }}">{{- anchor.content['#paragraph'].field_anchor_link.0.value -}}</a>
+         {%- endif -%}
+      {%- endfor -%}
+	  </div>
+	</nav>  
 {%- endif -%}
 <div{{ attributes.addClass(classes) }}>
 	{%- for item in items -%}
