Start switching out oc fields

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
@@ -8,7 +8,7 @@
 	<div class="accordion-header">
         <a href="#" role="button" aria-controls="{{ accordion_control }}" aria-expanded="false">{{accordion_header}}</a>
     </div>
-	<div class="field field-oc-long-text" id="{{ accordion_control }}" aria-hidden="true">
+	<div class="field field-long-text" id="{{ accordion_control }}" aria-hidden="true">
 		{{accordion_content}}
 	</div>
 </div>
