--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/_accordion.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/_accordion.scss
@@ -41,7 +41,7 @@
 	}
 
 	//accordion content
-	.field-oc-long-text{
+	.field-long-text{
 		display: none;
 		padding: 2rem 4rem;
 	}
@@ -64,7 +64,7 @@
 	//no-js fallback
 	.no-js &{
 		&:hover,&:focus{
-			.field-oc-long-text{
+			.field-long-text{
 				display: block;
 			}
 		}
