--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/form.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/form.twig
@@ -5,8 +5,7 @@
 
 <div class="paragraph paragraph--type--form">
 	<div class="widget-title">Form</div>
-	<div class="field field-oc-long-text">{{ form_text }}</div>
-	<div class="field field-oc-form">
+	<div class="field field-form">
 		<form class="webform-submission-form">
 			<div class="webform-element--title-inline js-form-item js-form-type-textfield form-item-name">
 				<label for="edit-name" class="js-form-required form-required">
