--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
@@ -50,12 +50,12 @@
 
         {% block lightboxContent %}
             {{ attach_library('oc_patterns/featherlight') }}
-            {%- for key, item in content.field_oc_image_multi if key|first != '#' -%}
-                {%- if paragraph.field_oc_image_multi[key].target_id > 0 -%}
-                    <div class="featherlight-gal image-gal" href="#item{{paragraph.field_oc_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">
-                        {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large_thumb') }}
-                        <div class="featherlight-hidden" id="item{{paragraph.field_oc_image_multi[key].target_id}}">
-                            {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large') }}
+            {%- for key, item in content.field_image_multi if key|first != '#' -%}
+                {%- if paragraph.field_image_multi[key].target_id > 0 -%}
+                    <div class="featherlight-gal image-gal" href="#item{{paragraph.field_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">
+                        {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large_thumb') }}
+                        <div class="featherlight-hidden" id="item{{paragraph.field_image_multi[key].target_id}}">
+                            {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large') }}
                         </div>
                     </div>
                 {%- endif -%}
@@ -65,7 +65,7 @@
         {% block sliderContent %}
             {{ attach_library('oc_patterns/slick') }}
             <div class="paragraph paragraph--type--slideshow">
-        	   {{- content.field_oc_image_multi -}}
+        	   {{- content.field_image_multi -}}
             </div>
         {% endblock %}
 
