--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -15,7 +15,7 @@
 	VARIABLES= left, right, center, inline, background</br>
 </p>
 </div>
-{% macro mainNavStyle() %}center background{% endmacro %}
+{% macro mainNavStyle() %}right{% endmacro %}
 
 
 {#######  SEARCH VARIABLES  #######}
