--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/links-files.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/links-files.twig
@@ -13,11 +13,15 @@
 	{% endif %}
 
 	{% block links %}
-		<div class="field field-oc-link-multi">
+		<div class="field field-link-multi">
 			{% for link in links %}
-
-				<div>
+				<div class="lf-item">
 					<a href="{{link.link_url}}">{{link.link_text}}</a>
+				</div>
+			{% endfor %}
+			{% for file in files %}
+				<div class="lf-item">
+					<a href="{{file.file_url}}">{{file.file_text}}</a>
 				</div>
 			{% endfor %}
 		</div>
