--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/text/text.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/text/text.twig
@@ -13,7 +13,7 @@
 		{% endif %}
 
 		{% block text %}
-			<div class="field field-oc-long-text">
+			<div class="field field-long-text">
 				<p>{{ text }}</p>
 				<p>{{ text_two }}</p>
 			</div>
