--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/video.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/video.twig
@@ -10,7 +10,7 @@
 		<div class="widget-title">{{ widget_title }}</div>
 	{% endif %}
 
-	<div class="field field-oc-video">
+	<div class="field field-video">
 		<article class="media media-video view-mode-default">
 			<div class="field field-media-video-embed-field">
 				<div class="video-embed-field-responsive-video">
