--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/image/paragraph--image.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/image/paragraph--image.html.twig
@@ -45,25 +45,25 @@
 
 {# Define image style based on picker #}
 {%- if (style == 'small') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'small') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'small') %}
 
 {%- elseif (style == 'medium') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'medium') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'medium') %}
 
 {%- elseif (style == 'large') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'large') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'large') %}
 
 {%- elseif (style == 'full') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'full') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'full') %}
 
 {%- elseif (style == 'square') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'square') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'square') %}
 
 {%- elseif (style == 'banner')-%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'banner') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'banner') %}
 
 {%- elseif (style == 'default') -%}
-	{% set image =  drupal_entity('media', paragraph.field_oc_image.0.target_id, 'default') %}
+	{% set image =  drupal_entity('media', paragraph.field_image.0.target_id, 'default') %}
 
 {%- endif -%}
 
@@ -74,8 +74,8 @@
 		with{
 			widget_title: content.field_widget_title.0['#context'].value,
 			image_style: style,
-			image_link: content.field_oc_link.0['#url'],
-			image_aria: content.field_oc_link.0['#title'],
+			image_link: content.field_link.0['#url'],
+			image_aria: content.field_link.0['#title'],
 
 		}
 	%}
