--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/pullquote/paragraph--pullquote.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/pullquote/paragraph--pullquote.html.twig
@@ -59,8 +59,8 @@
 		{% block plwidgetopen %}{# patternlab specifc html #}{% endblock %}
 
 		{% block quoteContent %}
-			{{- content.field_oc_long_text -}}
-			{{- content.field_oc_short_text -}}
+			{{- content.field_quote -}}
+			{{- content.field_source -}}
 		{% endblock %}
 
 		{% block plwidgetclose %}{# patternlab specifc html #}{% endblock %}
