--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -59,10 +59,10 @@
 	&:after{
 		color: $transBlack;
 		content: "”";
-		font-size: 12rem;
+		font-size: 8rem;
 		line-height: .1rem;
-		margin-right: 2rem;
-		vertical-align: -4.8rem;
+		margin-left: 1rem;
+		vertical-align: -2rem;
 	}
 }
 
