--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/pullquote.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/pullquote.twig
@@ -13,12 +13,12 @@
 
 	{% block quoteContent %}
 		{% if quote %}
-			<div class="field field-oc-long-text">
+			<div class="field field-quote">
 				{{ quote }}
 			</div>
 		{% endif %}
 		{% if source %}
-			<div class="field field-oc-short-text">
+			<div class="field field-source">
 				{{ source }}
 			</div>
 		{% endif %}
