--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/links-files/paragraph--links-files.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/links-files/paragraph--links-files.html.twig
@@ -58,12 +58,12 @@
 		{% block plwidgetopen %}{# patternlab specifc html #}{% endblock %}
 
 		{% block links %}
-			{%- if content.field_oc_link_multi.0 or content.field_oc_file_multi.0 -%}
+			{%- if content.field_link_multi.0 or content.field_file_multi.0 -%}
 				<div class="field links-files">
-					{%- for key, link in content.field_oc_link_multi if key|first != "#" -%}
+					{%- for key, link in content.field_link_multi if key|first != "#" -%}
 						<div class="lf-item"><a href="{{ link['#url'] }}">{{ link['#title'] }}</a></div>
 					{%- endfor -%}
-					{%- for key, file in content.field_oc_file_multi['#items'] if key|first != "#" -%}
+					{%- for key, file in content.field_file_multi['#items'] if key|first != "#" -%}
 						<div class="lf-item">{{ drupal_entity('media', file.entity.id, 'default') }}</div>
 					{%- endfor -%}
 				</div>
