--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-paragraphs.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--node--field-paragraphs.html.twig
@@ -40,7 +40,7 @@
 #}
 {%
 set classes = [
-'field--name-field-oc-widgets',
+'field field-paragraphs paragraph-reference',
 ]
 %}
 
@@ -67,7 +67,7 @@ set classes = [
 {%- endif -%}
 <div{{ attributes.addClass(classes) }}>
 	{%- for item in items -%}
-		<div class="section{% if (item.content['#paragraph'].field_background_style.0.value) %} background {{ item.content['#paragraph'].field_background_style.0.value }}{% else %} backless{% endif %} {{ item.content['#paragraph'].field_layout.0.value }}"{% if (item.content['#paragraph'].field_background_style.0.value == 'image') and (item.content['#paragraph'].field_background_image.0) %} style="background:url({{ file_url(item.content['#paragraph'].field_background_image.0.entity.field_media_image.entity.fileuri) }}) no-repeat;background-size: cover;"{% endif %}>
+		<div class="section{% if (item.content['#paragraph'].field_background_style.0.value) %} background {{ item.content['#paragraph'].field_background_style.0.value }}{% else %} backless{% endif %}{% if item.content['#paragraph'].field_layout.0 %} {{ item.content['#paragraph'].field_layout.0.value }}{% endif %}"{% if (item.content['#paragraph'].field_background_style.0.value == 'image') and (item.content['#paragraph'].field_background_image.0) %} style="background:url({{ file_url(item.content['#paragraph'].field_background_image.0.entity.field_media_image.entity.fileuri) }}) no-repeat;background-size: cover;"{% endif %}>
 			{% set anchor = item.content['#paragraph'].field_anchor_link.0.value|clean_id %}
 			{%- if anchor -%}<a name="anchor-{{ anchor }}" id="anchor-{{ anchor }}"></a>{%- endif -%}
 			{{- item.content -}}
