Fix call to custom search block

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -24,7 +24,7 @@
 	VARIABLES= toggle, box</br>
 </p>
 </div>
-{% macro searchBox() %}box{% endmacro %}
+{% macro searchBox() %}toggle{% endmacro %}
 
 
 {#######  FORM VARIABLES  #######}
