Fix site search page search block

--- a/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
@@ -31,6 +31,14 @@
 			}
 			.search-page-block{
 				margin-bottom: $spaceLg;
+				.search-form-outer{
+					#views-exposed-form-site-search-search-results{
+						display: block;
+						.form-actions{
+							margin: 0 auto;
+						}
+					}
+				}
 			}
 			h2.results-header{
 				width: 100%;
